# AI-YP24-75

./: .gitignore  1_EXOG_d_EDA.ipynb  1_Tickers_EDA.ipynb  2_Baseline.ipynb  EDA.md  README.md  checkpoints.md  dataset.md  docker-compose.yml  pyproject.toml  report.md  requirements.txt  Ставка_и_курсы.ipynb
FastAPI/: requirements.txt  test_model.pkl
FastAPI/app/: main.py
FastAPI/app/models/: data_models.py
FastAPI/app/services/: init_data.csv  ml_service.py
Streamlit/: StLogger.py  dockerfile  requirements.txt  serializer.py  streamlit_app.py
Streamlit/in_development/: 4_Compare_experiments.py  5_Load_model.py
Streamlit/pages/: 1_Add_ticker.py  1_Train_model.py  2_Predict.py  3_Get_ticker_data.py  4_Compare_experiments.py  4_Predict_current_model.py  5_Load_model.py
data/: currencies.csv  df_futures.pkl  df_tickers.csv  financial_indicators.csv  investing_futures.csv  macro.csv  rate.csv  rate.pkl
ideas/: df_tickers.pkl  v1.html  v1.ipynb
logs/: log_front.txt
