[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "apimoex>=1.3.0",
    "arch>=7.2.0",
    "matplotlib>=3.9.3",
    "nbformat>=5.10.4",
    "numpy==1.26.4",
    "pandas==2.0",
    "plotly>=5.24.1",
    "pmdarima>=2.0.4",
    "pywavelets>=1.6.0",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "streamlit>=1.41.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
