[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "apimoex>=1.3.0",
    "arch>=7.2.0",
    "fastapi>=0.115.6",
    "matplotlib>=3.9.3",
    "nbformat>=5.10.4",
    "numpy==1.26.4",
    "pandas==2.0",
    "plotly>=5.24.1",
    "pmdarima>=2.0.4",
    "pydantic>=2.10.4",
    "python-multipart>=0.0.20",
    "pywavelets>=1.6.0",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "streamlit>=1.41.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # Pyflakes
    "UP",       # pyupgrade
    "ASYNC",    # flake8-async
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "PIE",      # flake8-pie
    "SIM",      # flake8-simplify
    "Q",        # flake8-quotes
    "I",        # isort
]
